@@ -1,3 +1,6 @@
+20211204/pbiering:
+- HdOsdProviderSupport.h: relax CanHandleAreas to catch overlapping subtitle areas by y+1 (workaround for vdr < 2.5.2)
+
 20211203/pbiering:
 - HdFbTrueColorOsd: fix DrawText in case of OSD has not 100% size
 - ReelBoxDevice: disable sound mixer calls in HDMI_ONLY mode
